# secludia

./: .gitignore  .prettierignore  CLAUDE_CONTEXT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: LanguageSwitcher.tsx  ThemeSwitcher.tsx
src/config/: configTypes.ts  defaultConfig.ts  localStorage.test.ts  localStorage.ts
src/constants/: index.ts  layout.ts  presence.ts
src/context/: AppContext.test.tsx  AppContext.tsx  AppContext.types.ts  MediaRegistryContext.tsx  MediaRegistryContext.types.ts  UserContext.tsx  UserContext.types.ts  index.ts  useAppContext.ts  useMediaRegistry.ts  useUserContext.ts
src/hooks/: index.ts  useMatrixClient.ts  useMediaDevices.ts  useMediaPermission.ts  useMediaQuery.test.ts  useMediaQuery.ts  useMediaStream.ts  useNotification.ts  usePersistedSetting.ts  usePlatform.ts  useResizable.ts  useSidebar.ts  useTauriWindow.ts  useTranslatedOptions.ts  useWindowFocus.ts
src/i18n/: index.test.ts  index.ts  types.ts
src/locales/: en.json  es.json
src/mocks/: conversations.ts  index.ts  rooms.ts  sessions.ts  user.ts
src/test/: setup.ts
src/themes/: default.css  familiar copy.css  familiar.css  forest.css  ien.css  midnight.css  mint.css  nanel.css  ocean.css  sunset.css
src/types/: rnnoise-wasm.d.ts
src/utils/: cn.ts  index.ts  media.ts  string.ts  validation.test.ts  validation.ts
(+195 files in other folders)
