[package]
name = "secludia"
version = "0.1.0"
description = "A privacy-focused Matrix client"
authors = ["you"]
edition = "2021"

[lib]
name = "secludia_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
log = "0.4"
env_logger = "0.11"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-stronghold = "2"
argon2 = { version = "0.5", features = ["password-hash"] }
tokio = { version = "1", features = ["time"] }
dirs = "6.0.0"
serde_json = "1"
url = "2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
